--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Popular Movie</string>
+    <string name="watchlist_title">Watchlist</string>
+    <string name="movie_list_title_popular">Popular</string>
+    <string name="movie_list_title_top_rated">Top Rated</string>
 
     <string name="content_description_movie_poster">movie_poster</string>
     <string name="movie_list_not_connected">Not Connected</string>
@@ -7,4 +10,8 @@
 
     <string name="menu_filter_popular">Popular</string>
     <string name="menu_filter_top_rated">Top Rated</string>
+    <string name="menu_filter_watchlist">Watchlist</string>
+
+    <string name="movie_detail_add_watchlist">Watchlist</string>
+    <string name="movie_detail_remove_watchlist">Added to watchlist</string>
 </resources>
